# McDonalds_Simulator

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
api/: main.py
api/models/: request_models.py
api/routes/: orders.py
bot/: dispatcher.py  handlers.py  main.py  session.py
core/: llm_processor.py  menu_loader.py  models.py
core/order_engine/: adder.py  apply_llm.py  combo_adder.py  deal_applier.py  slot_filler.py  summary.py  upsell.py
core/prompts/: order_parser.txt
